--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -3,6 +3,7 @@
 {% block title %}
 Home
 {% endblock %}
+
 {% block body %}
 
 <div class="container">
@@ -19,17 +20,20 @@ Home
         <div class="row mb-3">
             <div class="col">
                 <div class="card shadow-sm">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ post.title }}</h5>
-                        <p class="card-text">{{ post.description }}</p>
-                        <p class="card-text text-muted">Posted by: {{ post.user.username }}</p>
-                        <p class="card-text text-muted">Posted at: {{ post.date_updated }}</p>
-                        {% if user == post.user %}
-                            <form method="post" action="{% url 'delete_post' post.id %}">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-danger">Confirm Delete</button>
-                            </form>
-                        {% endif %}
+                    <div class="card-body d-flex align-items-center">
+                        <img src="{{ post.user.profile.image.url }}" alt="User profile picture" class="rounded-circle me-3" style="width: 50px; height: 50px;">
+                        <div class="flex-grow-1">
+                            <h5 class="card-title">{{ post.title }}</h5>
+                            <p class="card-text">{{ post.description }}</p>
+                            <p class="card-text text-muted">Posted by: {{ post.user.username }}</p>
+                            <p class="card-text text-muted">Posted at: {{ post.date_updated }}</p>
+                            {% if user == post.user %}
+                                <form method="post" action="{% url 'delete_post' post.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="btn btn-danger">Confirm Delete</button>
+                                </form>
+                            {% endif %}
+                        </div>
                     </div>
                 </div>
             </div>
