--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -20,12 +20,15 @@ Home
         <div class="row mb-3">
             <div class="col">
                 <div class="card shadow-sm">
-                    <div class="card-body d-flex align-items-center">
-                        <img src="{{ post.user.profile.image.url }}" alt="User profile picture" class="rounded-circle me-3" style="width: 50px; height: 50px;">
+                    <div class="card-body d-flex flex-column">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <img src="{{ post.user.profile.image.url }}" alt="User profile picture" class="rounded-circle me-3" style="height: 50px;">
+                            <p class="card-text text-muted">Posted by: {{ post.user.username }}</p>
+                        </div>
+                        <img src="{{ post.imageurl }}" alt="Post image" class="img-fluid rounded mt-3" style="width: 100%;">
                         <div class="flex-grow-1">
                             <h5 class="card-title">{{ post.title }}</h5>
                             <p class="card-text">{{ post.description }}</p>
-                            <p class="card-text text-muted">Posted by: {{ post.user.username }}</p>
                             <p class="card-text text-muted">Posted at: {{ post.date_updated }}</p>
                             {% if user == post.user %}
                                 <form method="post" action="{% url 'delete_post' post.id %}">
